# LitMine

./: .gitignore  README.md  README_CN.md  README_JP.md  ROADMAP.md  docker-compose.yml
apps/api/: .env.template  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 0001_initial_tables.py  6716693929ac_add_pdf_storage_path.py  eee387a2fe96_add_translation_cache_columns.py
apps/api/app/: config.py  dependencies.py  main.py
apps/api/app/api/: auth.py  graph.py  ingest.py  llm_proxy.py  papers.py  projects.py  reports.py  router.py  search.py
apps/api/app/core/: database.py  minio.py  redis.py  security.py
apps/api/app/integrations/: arxiv.py  bibtex_ris.py  biorxiv.py  crossref.py  grobid.py  llm.py  openalex.py  pdf_text.py  pubmed.py  semantic_scholar.py
apps/api/app/models/: __init__.py  models.py
apps/api/app/schemas/: auth.py  graph.py  paper.py  project.py  report.py
apps/api/app/services/: crawler_service.py  paper_import_service.py  term_extractor.py
apps/api/app/utils/: text_normalizer.py
apps/api/app/workers/: crawl_paper_job.py  generate_report_job.py  parse_uploaded_pdf_job.py  worker.py
apps/api/litmine_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/web/: package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/hooks/: use-auth.tsx
apps/web/src/lib/: api-client.ts  deepseek-client.ts
apps/web/src/types/: cytoscape-cose-bilkent.d.ts  index.ts
scripts/: init-neo4j.cypher
(+25 files in other folders)
